# workClaw

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  config.toml  dev.sh  docker-compose.yml  package-lock.json  skills-lock.json  start.txt
.claude/: launch.json
crates/herness-core/: Cargo.toml
crates/herness-core/src/: lib.rs
crates/herness-core/src/agent/: mod.rs  skill.rs  subagent.rs
crates/herness-core/src/conversation/: context.rs  message.rs  mod.rs
crates/herness-core/src/llm/: anthropic.rs  chat.rs  mod.rs  openai.rs  provider.rs  streaming.rs
crates/herness-core/src/mcp/: client.rs  mod.rs  protocol.rs  runtime.rs  service.rs  transport.rs  types.rs
crates/herness-core/src/orchestrator/: mod.rs
crates/herness-core/src/skill_runtime/: context.rs  executor.rs  mod.rs  parser.rs  registry.rs
crates/herness-rule/: Cargo.toml
crates/herness-rule/src/: lib.rs
crates/herness-rule/src/cache/: hot_reload.rs  mod.rs
crates/herness-rule/src/distributed/: bus.rs  discovery.rs  executor.rs  mod.rs
crates/herness-rule/src/dsl/: parser.rs  types.rs  validator.rs
crates/herness-rule/src/engine/: context.rs  mod.rs  state.rs
crates/herness-rule/src/interceptor/: mod.rs
crates/herness-rule/src/interceptor/builtins/: auth.rs  logging.rs  metrics.rs  mod.rs  validation.rs
crates/herness-rule/src/node/: mod.rs  registry.rs  traits.rs
crates/herness-rule/src/node/builtins/: assign.rs  break_loop.rs  case.rs  catch_block.rs  condition.rs  delay.rs  end.rs  fork.rs  if_block.rs  if_node.rs  join.rs  llm.rs  log_node.rs  loop_node.rs  mod.rs  notification.rs  rest_client.rs  script.rs  start.rs  subchain.rs  switch.rs  transform.rs  try_catch.rs
crates/herness-server/: Cargo.toml
crates/herness-server/src/: config.rs  lib.rs  main.rs
crates/herness-server/src/api/: middleware.rs  mod.rs  router.rs
crates/herness-server/src/api/agents/: agent_create.rs  agent_delete.rs  agent_get.rs  agent_list.rs  agent_start.rs  agent_stop.rs  agent_update.rs  mod.rs
crates/herness-server/src/api/auth/: login.rs  register.rs
crates/herness-server/src/api/chat/: chat_history.rs  chat_send.rs  chat_ws.rs  mod.rs
crates/herness-server/src/api/kanban/boards/: board_create.rs  board_delete.rs  board_get.rs  board_list.rs  board_update.rs  mod.rs
crates/herness-server/src/api/kanban/columns/: column_create.rs  column_delete.rs  column_update.rs  mod.rs
crates/herness-server/src/api/kanban/tasks/: mod.rs  task_create.rs  task_delete.rs  task_get.rs  task_list.rs  task_move.rs  task_update.rs
crates/herness-server/src/api/logs/: log_export.rs  log_get.rs  log_list.rs  log_stream.rs  mod.rs
crates/herness-server/src/api/mcp_servers/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
crates/herness-server/src/api/models/: mod.rs  model_create.rs  model_delete.rs  model_update.rs  provider_create.rs  provider_delete.rs  provider_get.rs  provider_list.rs  provider_update.rs
crates/herness-server/src/api/rules/: mod.rs  rule_create.rs  rule_delete.rs  rule_execute.rs  rule_export.rs  rule_get.rs  rule_import.rs  rule_list.rs  rule_metrics.rs  rule_toggle.rs  rule_update.rs  rule_validate.rs
crates/herness-server/src/api/skills/: delete.rs  get_content.rs  list.rs  mod.rs  upload.rs
crates/herness-server/src/ws/: handler.rs  messages.rs  mod.rs  session.rs
docker/: nginx.conf
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-converter.mjs  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  verify_converter.js  (+1 more)
(+106 files in other folders)
