[workspace]
resolver = "2"
members = [
    "crates/herness-common",
    "crates/herness-core",
    "crates/herness-rule",
    "crates/herness-server",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
rand = "0.8"
futures = { version = "0.3", default-features = false }
dashmap = "6"
jsonwebtoken = "9"
argon2 = "0.5"
rhai = "1"
cel-interpreter = "0.7"
rmcp = { version = "0.6", features = ["client", "transport-child-process"] }
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
lru = "0.14"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_yaml = "0.9"
async-openai = { version = "0.38", features = ["_api", "chat-completion-types", "chat-completion"] }
claude-api = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
