[package]
name = "herness-rule"
version = "0.1.0"
edition = "2021"

[dependencies]
herness-common = { path = "../herness-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
rhai = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
regex = { workspace = true }
